fix safari btntxt alignment

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,17 @@
     font-family: 'robotoregular', Arial, Helvetica, sans-serif;
 }
 
+button {
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal; /* or match your button height */
+    padding: 0.5em 1em;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
 img {
     margin-right: -18px;
 }
@@ -87,7 +98,7 @@ body {
     flex-grow: 4;
     display: flex;
     flex-direction: column;
-    width: 800px;
+    width: 900px;
 }
 
 .form {
@@ -168,10 +179,14 @@ body {
 
 .submit {
     margin-top: 1.5rem;
-    padding: 16px 12px;
+    padding: 16px 0px;
     background-color: #45cb68;
     border: #45cb68 2px solid;
     color: #101010;
+    transition: 0.1s;
+    text-align: center;
+    width: 30%;
+    border-radius: 32px;
     transition: 0.1s;
 }
 
